# askthedocs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rag_chatbot.py  requirements.txt
src/: rag_chatbot.py
